loc and base64 code api added